Fix gaps, misses, weak-refs, new context menu design

--- a/src/$scss$/modules/_Normalize.scss
+++ b/src/$scss$/modules/_Normalize.scss
@@ -19,7 +19,7 @@
             }
 
             //
-            :where(body, button, html, :root) { font-family: 'Open Sans', 'Gill Sans Nova', Ubuntu, 'DejaVu Sans', Candara, Segoe, "Segoe UI", Optima, source-sans-pro, sans-serif; }
+            :where(body, button, html, :root) { font-family: "InterVariable", "Inter", 'Open Sans', 'Gill Sans Nova', Ubuntu, 'DejaVu Sans', Candara, Segoe, "Segoe UI", Optima, source-sans-pro, sans-serif; }
         }
 
         //
